@@ -705,12 +705,13 @@ void TestGCTAResponse::test_response_irf_diffuse(void)
     // Set reference value
     //double ref = 13803.800313356;
     //const double ref = 13803.5186374;
-    //const double ref = 13803.6932774; // after GWcs::solidangle improvement
-    //const double ref = 13803.3453994; // after Irf computation improvements
-    //const double ref = 13803.3461768; // using skymap flux() method
-    //const double ref = 13803.5251338; // after correcting contains() method
-    //const double ref = 13803.058889257; // after increasing integration accuracy
-    const double ref = 13803.4194464338; // after increasing integration accuracy
+    //const double ref = 13803.6932774;    // after GWcs::solidangle improvement
+    //const double ref = 13803.3453994;    // after Irf computation improvements
+    //const double ref = 13803.3461768;    // using skymap flux() method
+    //const double ref = 13803.5251338;    // after correcting contains() method
+    //const double ref = 13803.058889257;  // after increasing integration accuracy
+    //const double ref = 13803.4194464338; // after increasing integration accuracy
+    const double ref = 13803.1566304811;   // after reverting contains() method
 
     // Set parameters
     double src_ra  = 201.3651;
@@ -795,7 +796,8 @@ void TestGCTAResponse::test_response_npred_diffuse(void)
     //const double ref = 11212.7161901; // npred_diffuse precision to iter=8
     //const double ref = 11238.6928076; // npred_diffuse precision to iter=9
     //const double ref = 11238.6933328; // using skymap flux() method
-    const double ref = 11238.8390288; // after correcting contains() method
+    //const double ref = 11238.8390288; // after correcting contains() method
+    const double ref = 11238.6933449; // after reverting contains() method
 
     // Set parameters
     double src_ra  = 201.3651;
